--- a/wso2/files/wso2-as.sh.jinja
+++ b/wso2/files/wso2-as.sh.jinja
@@ -1,24 +1,170 @@
-#!/bin/sh
-export JAVA_HOME={{ java_home }}
- 
-startcmd='{{ wso2_root }}/bin/wso2server.sh start > /dev/null &'
-restartcmd='{{ wso2_root }}/bin/wso2server.sh restart > /dev/null &'
-stopcmd='{{ wso2_root }}/bin/wso2server.sh stop > /dev/null &'
- 
+#!/bin/bash
+### BEGIN INIT INFO
+# Provides:       wso2as
+# Required-Start: $remote_fs $network $syslog
+# Required-Stop:  $remote_fs $network $syslog
+# Default-Start:  2 3 4 5
+# Default-Stop:   0 1 6
+# Short-Description: WSO2 AS
+# Description:    WSO2 Application Server
+### END INIT INFO
+# --------------------------------------------------------------
+#
+# chkconfig: 2345 95 20
+# description: Deamon Service to Start up stopped services at server startup
+# processname: wso2as
+#
+# --------------------------------------------------------------
+# This service script will be executed to start the servers.
+# --------------------------------------------------------------
+#
+
+USER="{{ wso2_user }}"
+PRODUCT_CODE="AS"
+CARBON_HOME="{{ wso2_root }}"
+LOCK_FILE="${CARBON_HOME}/wso2carbon.lck"
+PID_FILE="${CARBON_HOME}/wso2carbon.pid"
+CMD="${CARBON_HOME}/bin/wso2server.sh"
+JAVA_HOME="{{ java_home }}"
+
+export JAVA_HOME=$JAVA_HOME
+
+# Status the service
+status() {
+ if [ -f $PID_FILE ]
+     then
+  PID=`cat $PID_FILE`
+  ps -fp $PID > /dev/null 2>&1
+  PIDVAL=$?
+     else
+  PIDVAL=3
+ fi
+
+ if [ $PIDVAL -eq 0 ]
+     then
+  echo "WSO2 $PRODUCT_CODE server is running ..."
+     else
+  echo "WSO2 $PRODUCT_CODE server is stopped."
+ fi
+ return $PIDVAL
+}
+
+# Start the service
+start() {
+ if [ -f $PID_FILE ]
+     then
+  PID=`cat $PID_FILE`
+  ps -fp $PID > /dev/null 2>&1
+  PIDVAL=$?
+     else
+  PIDVAL=3
+ fi
+
+ if [ $PIDVAL -eq 0 ]
+     then
+        echo "WSO2 $PRODUCT_CODE server is running ..."
+     else
+        echo -n "Starting WSO2 $PRODUCT_CODE server: "
+        touch $LOCK_FILE
+        su - $USER -c "$CMD start > /dev/null 2>&1 &"
+        sleep 5
+        if [ -f $PID_FILE ]
+     then
+   PID=`cat $PID_FILE`
+   ps -fp $PID > /dev/null 2>&1
+   PIDVAL=$?
+   if [ $PIDVAL -eq 0 ]
+       then
+    echo "success"
+       else
+    echo "failure"
+   fi
+     else
+   echo "failure"
+   PIDVAL=2
+        fi
+ fi
+ echo
+ return $PIDVAL
+}
+
+# Restart the service
+restart() {
+ echo -n "Restarting WSO2 $PRODUCT_CODE server: "
+ touch $LOCK_FILE
+ su - $USER -c "$CMD restart > /dev/null 2>&1 &"
+ sleep 15
+ if [ -f $PID_FILE ]
+     then
+  PID=`cat $PID_FILE`
+  ps -fp $PID > /dev/null 2>&1
+  PIDVAL=$?
+  if [ $PIDVAL -eq 0 ]
+      then
+   echo "success"
+      else
+   echo "failure"
+  fi
+     else
+  echo "failure"
+  PIDVAL=2
+ fi
+ echo
+ return $PIDVAL
+}
+
+# Stop the service
+stop() {
+ if [ -f $PID_FILE ]
+     then
+  PID=`cat $PID_FILE`
+  ps -fp $PID > /dev/null 2>&1
+  PIDVAL=$?
+  if [ $PIDVAL -eq 0 ]
+      then
+   echo -n "Stopping WSO2 $PRODUCT_CODE server: "
+   su - $USER -c "$CMD stop > /dev/null 2>&1 &"
+   rm -f $LOCK_FILE
+   sleep 10
+   PID=`cat $PID_FILE`
+   ps -fp $PID > /dev/null 2>&1
+   PIDVAL=$?
+   if [ $PIDVAL -eq 0 ]
+       then
+    echo "failure"
+    PIDVAL=2
+       else
+    echo "success"
+    PIDVAL=0
+   fi
+      else
+         echo "WSO2 $PRODUCT_CODE server is not running."
+         PIDVAL=0
+  fi
+     else
+        echo "WSO2 $PRODUCT_CODE server is not running."
+        PIDVAL=0
+ fi
+ echo
+ return $PIDVAL
+}
+
+### main logic ###
 case "$1" in
 start)
-   echo "Starting WSO2 Application Server ..."
-   su -c "${startcmd}" {{ wso2_user }}
-;;
-restart)
-   echo "Re-starting WSO2 Application Server ..."
-   su -c "${restartcmd}" {{ wso2_user }}
-;;
+    start
+    ;;
 stop)
-   echo "Stopping WSO2 Application Server ..."
-   su -c "${stopcmd}" {{ wso2_user }}
-;;
+    stop
+    ;;
+status)
+    status
+    ;;
+restart|reload|condrestart)
+    restart
+    ;;
 *)
-   echo "Usage: $0 {start|stop|restart}"
-exit 1
+   echo $"Usage: $0 {start|stop|restart|reload|status}"
+   exit 1
 esac
+exit $?
