Fixed zabbix issue

--- a/zabbix/map.jinja
+++ b/zabbix/map.jinja
@@ -10,6 +10,9 @@
       'database_password': 'zabbix',
       'server_host': 'localhost',
       'server_name': 'MyDefaultZabbix',
+      'gmail_account': 'mygmailaccount@gmail.com',
+      'gmail_password': 'mygmailpassword',
+      'sender_name': 'Zabbix Alerts'
     },
   },
   merge=salt['pillar.get']('zabbix')
